fixed spacing

--- a/src/SearchBar.css
+++ b/src/SearchBar.css
@@ -34,7 +34,7 @@
   height: 40vh;
 }
 .randomContent {
-  margin-left: -200px;
+  margin-left: -700px;
   align-items: center;
   width: 40vw;
 }
